@@ -434,6 +434,7 @@ Jim Hugunin
 Greg Humphreys
 Eric Huss
 Jeremy Hylton
+Ludwig Hähne
 Gerhard Häring
 Fredrik Håård
 Mihai Ibanescu
